--- a/IhalematikPro/Forms/Tedarikci/frm_TopluObfEkleTedarikci.resx
+++ b/IhalematikPro/Forms/Tedarikci/frm_TopluObfEkleTedarikci.resx
@@ -5465,7 +5465,7 @@
         CAA7
 </value>
   </data>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pnlYukle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlhIANYAvcAAKa2vkuuT2mEkuvw8WSBjqu6w+vw7tvh5M7W2uHm6+3w9Ort7nqRnM7Z24Wapevv
         8+7w8tTc4PDw8M/X2199jHSNmcTO0+zu7vDv8pmpqc/j02B8ht7l6GF8jOrx9YyhqXuVoebs72B7icHI
